# 30er.party

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.js
conf/: nginx.conf
frontend/src/: base.css  loader.css  styles.css  tailwindcss.css
website/: __init__.py  celery_conf.py  forms.py  models.py  settings.py  tasks.py  urls.py  views.py
website/migrations/: 0001_initial.py  0002_game_player_playgame_playresult.py  0003_alter_player_name.py  0004_alter_playresult_points.py  0005_playgame_finished.py  0006_alter_playresult_play_game_alter_playresult_player.py  0007_game_points_for_looser_game_points_for_winner.py  0008_alter_playresult_points.py
website/templates/: _base.html  active_games.html  gallery.html  game_overview.html  game_results.html  index.html  new_game.html  new_play.html  new_player.html  player.html  scores.html
website/templates/parts/: custom_player_select.html  partyimage.html
